fixed some styling on small screen, and fixed play song button issue where an error will no longer be thrown when there is a mismatch state between the client and the spotify server

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,6 @@
 
 @layer components {
     .button {
-        @apply h-7 w-7 hover:text-gray-300 cursor-pointer
+        @apply md:h-7 md:w-7 hover:text-gray-300 cursor-pointer w-5 h-5
     }
 }
